# Vision-Transformer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
app/: main.cu  realTime.cpp  test.cu  testImage.cu  testLabel.cu
include/activations/: GELU.cuh  ReLU.hpp
include/core/: Tensor.hpp
include/layers/: Conv2d.cuh  Dense.cuh  Dropout.cuh  Embeddings.cuh  FeedForward.cuh  Layer.cuh  LayerNorm.cuh  MultiHeadAttention.cuh  PatchEmbedding.cuh
include/losses/: CrossEntropy.cuh  Loss.cuh
include/model/: Trainer.cuh  TransformerEncoderBlock.cuh  VisionTransformer.cuh
include/optimizers/: Adam.cuh  Optimizer.cuh  SGD.hpp  Scheduler.cuh
include/utils/: CudaUtils.cuh  DataAugmentation.cuh  DataReader.hpp  Logger.hpp  ModelUtils.hpp
src/activations/: GELU.cu  ReLU.cpp
src/core/: Tensor.cpp
src/layers/: Conv2d.cu  Dense.cu  Dropout.cu  Embeddings.cu  FeedForward.cu  LayerNorm.cu  MultiHeadAttention.cu  PatchEmbedding.cu
src/losses/: CrossEntropy.cu
src/model/: Trainer.cu  TransformerEncoderBlock.cu  VisionTransformer.cu
src/optimizers/: Adam.cu
src/utils/: CudaUtils.cu  DataAugmentation.cu  DataReader.cpp  Logger.cpp  ModelUtils.cpp
